# StarkSwirl

./: .gitignore  .gitmodules  README.md  Scarb.toml  generate_merkle_tree.py  generate_proof.py  generate_tree_values.py
cairo/: Scarb.toml
cairo/src/: lib.cairo  validate_merkle_proof.cairo
cli/: Cargo.toml  Scarb.toml  cli.sierra.json
cli/prover/: cpu_air_params.json
cli/src/: lib.cairo  main.rs  run_cairo_program.rs  run_stone_prover.rs  validate_merkle_proof.cairo
contracts/: README.md  Scarb.toml  deploy.sh  snfoundry.toml
contracts/devnet/: .starknet-devnet-env  deploy.sh  devnet_accounts.json  run-starknet-devnet.sh
contracts/scripts/: Scarb.toml
contracts/scripts/src/: deploy.cairo  get_input_hash.cairo  lib.cairo
contracts/src/: deploy.sh  interfaces.cairo  lib.cairo  mock_erc20.cairo  stark_swirl.cairo
contracts/tests/: lib.cairo  test_starkswirl.cairo
examples/: stark_proof
src/: lib.cairo  validate_merkle_proof.cairo
tools/: cpu_air_params.json  fri_step_list.py
tools/corelib/: Scarb.toml
tools/herodotous/: snfoundry_proof_serializer
