[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = "0.11.0"
tokio = { version = "1.38.0", features = ["full"] }
cairo1-run = { path = "cairo-vm/cairo1-run" }
cairo-vm = { path = "cairo-vm/vm" }
clap = { version = "4.5.8", features = ["derive"] }
serde_json = "1.0.118"